[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pirate Treasure/Coin Effect/03.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pirate Treasure/Coin Effect/01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pirate Treasure/Coin Effect/02.png" type="Texture" id=7]
[ext_resource path="res://Assets/Pirate Treasure/Sound_Coins/collected_coins.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Pirate Treasure/Gold Coin/Coin.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "collected"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[node name="Coin" type="Area2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.547, 0.454 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/collected = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="CoinsCollector" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
